# ECU-HeadUnit

./: .gitignore  CMakeLists.txt  README.md  src_gen_cmd.sh
ArduinoCAN/: ArduinoCAN.ino  README.md
DES-Head-Unit-main/: README.md
InstrumentCluster/: CMakeLists.txt  CarInformation.cpp  ValueSource.qml  main.cpp  main.qml
InstrumentCluster/fidl/: DESProject.fdepl  DESProject.fidl
InstrumentCluster/src-gen-desproject/v1/commonapi/: IPCManagerSomeIPProxy.hpp  InstrumentClusterProxy.hpp  InstrumentClusterProxyBase.hpp  InstrumentClusterSomeIPProxy.cpp  InstrumentClusterSomeIPProxy.hpp  InstrumentClusterSomeIPStubAdapter.hpp  InstrumentClusterStub.hpp  InstrumentClusterStubDefault.hpp
InstrumentCluster/src/IPCManager/: IPCManager.cpp
InstrumentCluster/src/InstrumentCluster/: BasicGaugeStyle.qml  CarInformation.cpp  CarInformation.hpp  InstrumentClusterStubImpl.cpp  InstrumentClusterStubImpl.hpp  QtFunction.cpp  QtFunction.hpp  SpeedGaugeStyle.qml  ValueSource.qml  main.cpp  main.qml  temp_main.cpp
InstrumentCluster/src/PiracerSender/: PiracerClass.cpp
Piracer/: CMakeLists.txt
Piracer/fidl/: DESProject.fdepl  DESProject.fidl
arduinocan/: README.md  arduinocan.ino
arduinocantemp/: README.md
both_direction_test/: CMakeLists.txt
both_direction_test/fidl/: DESProject.fdepl
can_test/: CMakeLists.txt
can_test/src/: CANBusReceiver.hpp  main.cpp  main.hpp
complete_unity/: CMakeLists.txt  setup_can.sh
complete_unity/fidl/: DESProject.fdepl  DESProject.fidl
complete_unity/reboot_script/: reboot_can_sender.sh  reboot_head_unit.sh  reboot_instrument_cluster.sh  reboot_piracer_operator.sh  reboot_piracer_sender.sh
connect_all/: CMakeLists.txt
connect_all/fidl/: DESProject.fidl
delay/: CMakeLists.txt  result.txt
delay/reboot_script/: reboot_can_sender.sh
fidl/: DESProject.fdepl  DESProject.fidl  README.md
fidl/CANSender/: CANSender.fdepl  CANSender.fidl
fidl/HeadUnit/: HeadUnit.fdepl  HeadUnit.fidl
fidl/IPCManager/: IPCManager.fdepl  IPCManager.fidl
fidl/IVICompositor/: IVICompositor.fdepl  IVICompositor.fidl
fidl/InstrumentCluster/: InstrumentCluster.fdepl  InstrumentCluster.fidl
fidl/PDCUnit/: PDCUnit.fdepl  PDCUnit.fidl
fidl/PiracerController/: PiracerController.fdepl  PiracerController.fidl
fidl/PiracerSender/: PiracerSender.fdepl  PiracerSender.fidl
fidl/RemoteSpeaker/: RemoteSpeaker.fdepl  RemoteSpeaker.fidl
gear_control/: CMakeLists.txt  code generate command
head_unit/: CMakeLists.txt
head_unit/fidl/: DESProject.fdepl  DESProject.fidl
measure_delay/reboot_script/: reboot_can_sender.sh  reboot_head_unit.sh  reboot_instrument_cluster.sh
mode_control/: CMakeLists.txt
piracer_client/: CMakeLists.txt
piracer_client/fidl/: DESProject.fdepl  DESProject.fidl
piracer_client/src-gen-desproject/v1/commonapi/: IPCManagerSomeIPStubAdapter.cpp
piracer_client/src-gen-manager/v1/commonapi/: ManagerSomeIPStubAdapter.hpp  ManagerStubDefault.hpp
piracer_client/src/BatteryClient/: BatteryClient.cpp
piracer_client/src/IPCManager/: IPCManagerService.cpp  IPCManagerStubImpl.cpp
piracer_client/src/ManagerService/: ManagerStubImpl.hpp
piracer_client/src/PiracerClient/: PiracerClient.cpp  piracerClass.cpp  piracerClass.hpp
piracer_client/src/PiracerOperator/: PiracerOperator.cpp  piracerClass.hpp
piracer_client/src/SpeedClient/: sendSomeipThread.cpp  sendSomeipThread.hpp
reboot_script/: README.md  reboot_can_sender.sh  reboot_head_unit.sh  reboot_instrument_cluster.sh  reboot_ivi_compositor.sh  reboot_pdc_unit.sh  reboot_piracer_controller.sh  reboot_piracer_operator.sh  reboot_piracer_sender.sh  reboot_piracer_signal.sh
screen_test/: CMakeLists.txt
screen_test/src-gen-desproject/v1/commonapi/: HeadUnitSomeIPStubAdapter.hpp  HeadUnitStub.hpp  HeadUnitStubDefault.hpp
screen_test/src/HeadUnit/: HeadUnit.cpp  HeadUnitStubImpl.cpp
screen_test/src/HeadUnit/qml/: ValueSource.qml  main.qml
screen_test/src/IPCManager/: IPCManagerSenderClass.hpp
screen_test/src/InstrumentCluster/: InstrumentCluster.cpp
setting/: README.md  patch  test
speed_client/: CMakeLists.txt
src/: HeadUnit.cpp  HeadUnitQtClass.cpp  HeadUnitQtClass.hpp  README.md  qml.qrc
src-gen/: README.md
src-gen-desproject/: README.md
src/Arduino/: SpeedSensor.ino
src/CANSender/: CANBuffer.c  CANBuffer.h  CANSender.cpp  CANSenderStubImpl.cpp  CANSenderStubImpl.hpp  DistanceBuffer.c  DistanceBuffer.h  README.md  ReadCANThread.c  ReadCANThread.h  SendSomeipThread.cpp  SendSomeipThread.hpp  SpeedBuffer.c  SpeedBuffer.h
src/HeadUnit/: HeadUnit.cpp  HeadUnitQtClass.cpp  HeadUnitQtClass.hpp  HeadUnitSenderClass.cpp  HeadUnitSenderClass.hpp  HeadUnitStubImpl.cpp  HeadUnitStubImpl.hpp  README.md  qml.qrc
src/IPCManager/: IPCManager.cpp  IPCManagerSenderClass.cpp  IPCManagerSenderClass.hpp  IPCManagerStubImpl.cpp  IPCManagerStubImpl.hpp  PiracerClass.cpp  PiracerClass.hpp  README.md
src/IVICompositor/: IVICompositor.cpp  IVICompositorQtClass.cpp  IVICompositorQtClass.hpp  IVICompositorSenderClass.cpp  IVICompositorSenderClass.hpp  IVICompositorStubImpl.cpp  IVICompositorStubImpl.hpp  README.md  qml.qrc
src/InstrumentCluster/: InstrumentCluster.cpp  InstrumentClusterQtClass.cpp  InstrumentClusterQtClass.hpp  InstrumentClusterSenderClass.cpp  InstrumentClusterSenderClass.hpp  InstrumentClusterStubImpl.cpp  InstrumentClusterStubImpl.hpp
src/PDCUnit/: PDCUnit.cpp  PDCUnitQtClass.cpp  PDCUnitQtClass.hpp  PDCUnitSenderClass.cpp  PDCUnitSenderClass.hpp  PDCUnitStubImpl.cpp  PDCUnitStubImpl.hpp  README.md  qml.qrc
src/ParkingDistanceControl/: HeadUnit.cpp  HeadUnitQtClass.cpp  HeadUnitQtClass.hpp  HeadUnitStubImpl.cpp
src/PiracerController/: ControllerClass.cpp  ControllerClass.hpp  PiracerController.cpp  PiracerControllerStubImpl.cpp  PiracerControllerStubImpl.hpp  README.md
src/PiracerOperator/: PiracerClass.cpp  PiracerClass.hpp  PiracerOperator.cpp  PiracerOperatorStubImpl.cpp  PiracerOperatorStubImpl.hpp  README.md
src/PiracerSender/: PiracerClass.cpp  PiracerClass.hpp  PiracerSender.cpp  PiracerSenderStubImpl.cpp  PiracerSenderStubImpl.hpp  (+1 more)
(+410 files in other folders)
